# deimos

./: Makefile  README.md
deimos/: Cargo.toml
deimos/.cargo/: config.toml
deimos/src/: allocation.rs  allocator.rs  emulation.rs  gdt.rs  interrupts.rs  logo.rs  main.rs  memory.rs  serial.rs  tests.rs  vga_buffer.rs
deimos/src/async_proc/: keyboard.rs
deimos/src/donut/: mod.rs  scene.rs
deimos/src/emulation/: qemu.rs
deimos/src/hardware_interface/: interrupts.rs  mod.rs  serial.rs  vga_buffer.rs
deimos/src/memory_management/: allocator.rs  linked_list.rs  mod.rs  page_table.rs
deimos/src/process/: exec.rs  mod.rs  task.rs
deimos/src/tests/: mod.rs  tests.rs
