[package]
name = "deimos"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "deimos"
test = true
bench = false

[unstable]
json-target-spec = true

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = {version="1.0", features=["spin_no_std"]}
spin = "0.5.2"
