[package]
name = "deimos"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "deimos"
test = true
bench = false

[dependencies]
bootloader = {version="0.9", features=["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = {version="1.0", features=["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
run-args = ["-serial", "stdio",
            "-m", "4G"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
             "-serial", "stdio", 
             "-display", "none",
             "-m", "4G"]
test-timeout = 300 # in seconds
test-success-exit-code = 33
